--- a/_config.yml
+++ b/_config.yml
@@ -27,3 +27,4 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username: textninja
+safe: false
